--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "http-errors": "^2.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0"
   },
