--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "DEBUG=css-api:*  nodemon index.js"
+    "dev": "DEBUG=css-api:*  nodemon index.js",
+    "vercel-build": "echo hello"
   },
   "dependencies": {
     "cors": "^2.8.5",
